flasm: 1.63 update brings compatibility with bison 2.4 and proper handling of temporary files
git-svn-id: https://svn.macports.org/repository/macports/trunk@69863 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/flasm/Portfile
+++ b/dports/devel/flasm/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 name                        flasm
 # flasm's version number appears to be expressed as a floating-point number
 # instead of a dotted decimal; expect to need to increase the epoch often
-version                     1.62
+version                     1.63
 categories                  devel graphics
 platforms                   darwin
 maintainers                 ryandesign
@@ -22,21 +22,17 @@ dist_subdir                 ${name}/${version}
 distname                    ${name}[lindex [split ${version} .] 0][string index [lindex [split ${version} .] 1] 0]src
 use_zip                     yes
 
-checksums                   md5     ce0edf6b424c70fadc7ea2277d312a70 \
-                            sha1    a85cc4db72561ada6429ead47f28618d08a89041 \
-                            rmd160  7076a6b1aa8312c7a2356e9ddf92501f3bdd0f6b
+checksums                   md5     28a4586409061b385d1cd27d3f120c0b \
+                            sha1    3b383fa042eae414c5e5608bfa91a42f44bd1a86 \
+                            rmd160  8dd4bbb9841fa6a66f2e1499b419084564f54e53
 
-depends_build               port:flex \
+depends_build               port:bison \
+                            port:flex \
                             port:gperf
 
 depends_lib                 port:zlib
 
 extract.mkdir               yes
-
-post-patch {
-    # MacPorts bison (2.4.2) is too new; use system's bison (2.3 on Snow Leopard)
-    reinplace {s|bison|/usr/bin/bison|g} ${worksrcpath}/Makefile
-}
 
 use_configure               no
 
