--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20100715040507
-set buildhash       g3618ff
+set buildstamp      20100719040503
+set buildhash       g51356a
 version             0.7.5
-revision            8
+revision            9
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -37,8 +37,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    05d3ffc0be48f4c5752f56099ad68503a92f4edc \
-                    rmd160  2294b0bc83a91cb4046d4e9d30f4041c1f8ee1da
+checksums           sha1    c46b67a31263b77a789dc4f1e92d1f912237a8aa \
+                    rmd160  69fe2acd60a3808fcd449e39f35ebfe894044a96
 
 #configure.optflags  -O0
 #configure.cflags-append -g
