update version py2*-psycopg2
git-svn-id: https://svn.macports.org/repository/macports/trunk@69870 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-psycopg2/Portfile
+++ b/dports/python/py26-psycopg2/Portfile
@@ -5,8 +5,7 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-psycopg2
-version             2.2.1
-revision        1
+version             2.2.2
 categories-append   databases
 license             GPLv2+
 maintainers         snc openmaintainer
@@ -23,9 +22,8 @@ depends_lib-append  port:openssl
 distname            psycopg2-${version}
 master_sites        http://initd.org/pub/software/psycopg/
 
-checksums           md5     70b50773aefe5fb371ff4a018382012f \
-                    sha1    1ab82e2cfc2be1464ef7dc1cf8c109cb0da364b2 \
-                    rmd160  55ebf6648a32681af46f4b04c233c10b59c428e5
+checksums           sha1    850f6bfa2bf986376b45e49334b7f153a33e4960 \
+                    rmd160  df51d6bfe81a603cfac54afe2c5eb07de165c0ab
 
 patchfiles          patch-setup.cfg.diff
 
