py-ctypes: fix compile failures on Snow Leopard (#25148, #22418)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69875 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py-ctypes/Portfile
+++ b/dports/python/py-ctypes/Portfile
@@ -5,6 +5,7 @@ PortGroup python24 1.0
 
 name			py-ctypes
 version			1.0.2
+revision		1
 categories		python
 platforms		darwin
 maintainers		nomaintainer
@@ -23,9 +24,17 @@ checksums		md5     94ff7aa7f7f71b23bac8a98065d77743 \
 
 distname		ctypes-${version}
 
+depends_build-append	port:pkgconfig
+
 depends_lib-append	port:libffi
 
-build.env	CC=${configure.cc} CPP=${configure.cpp}
+patchfiles		patch-setup.py.diff
+
+build.env		CC=${configure.cc} CPP=${configure.cpp} CFLAGS="-D_DARWIN_C_SOURCE"
+
+pre-build {
+	build.env-append	CPPFLAGS="[exec ${prefix}/bin/pkg-config libffi --cflags]"
+}
 
 test.run		yes
 test.cmd		${build.cmd}
