security/pinentry - add qt4 support with a new variant, ticket #25402
git-svn-id: https://svn.macports.org/repository/macports/trunk@69877 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/pinentry/Portfile
+++ b/dports/security/pinentry/Portfile
@@ -28,6 +28,7 @@ configure.args              --mandir=${prefix}/share/man \
                             --enable-pinentry-curses \
                             --disable-pinentry-gtk2 \
                             --disable-pinentry-gtk \
+                            --disable-pinentry-qt4 \
                             --disable-pinentry-qt
 
 depends_lib                 port:libiconv \
@@ -56,6 +57,18 @@ variant qt3 description {Enable qt3 pinentry} {
                             --enable-fallback-curses \
                             --with-qt-includes=${prefix}/include/qt3 \
                             --with-qt-libraries=${prefix}/lib
+}
+
+variant qt4 description {Enable qt4 pinentry} {
+    depends_lib             port:qt4-mac
+    configure.env-append    QTDIR=${prefix}/libexec/qt4-mac \
+                            MOC=${prefix}/libexec/qt4-mac/bin/moc
+    configure.args-delete   --disable-pinentry-qt4
+    configure.args-append   --enable-pinentry-qt4 \
+                            --enable-fallback-curses \
+                            --with-qt-includes=${prefix}/libexec/qt4-mac/include \
+                            --with-qt-libraries=${prefix}/libexec/qt4-mac/lib \
+                            PKG_CONFIG_PATH=${prefix}/libexec/qt4-mac/lib/pkgconfig
 }
 
 platform darwin {
