lcms: update livecheck regex.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69881 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/lcms/Portfile
+++ b/dports/graphics/lcms/Portfile
@@ -40,4 +40,4 @@ test.target             check
 
 livecheck.type  regex
 livecheck.url   http://www.littlecms.com/downloads.htm
-livecheck.regex "${name}-(\\d+(?:\\.\\d+)*\[a-z\]?)${extract.suffix}"
+livecheck.regex "Current version is (.*)<"
