Fix for ticket #25712: remove configure.arg "-optimized-qmake" since it seems to result in a non-functional 'qmake' executable on 10.6 i386 and x86_64, qt4-mac and qt4-mac-devel.  This flag does seem to work on 10.5, so leaving it in place for all but 10.6.  Removed 'pre-deactivate' deleting of the "[Pp]honon" header file(s), because in order for that section to be executed one will already be using the sqlite db -- which is case sensitive and hence those headers will always be removed correctly.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69882 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -226,21 +226,25 @@ platform darwin 9 {
         if {[file exists /Developer/SDKs/MacOSX10.5.sdk]} {
             configure.args-append -sdk /Developer/SDKs/MacOSX10.5.sdk
         } else {
-            ui_msg "No SDK found in Developer/SDKs ; \
+            ui_msg "No SDK found in Developer/SDKs for 10.5 ; \
 configure will probably fail. \n \
 Please install Apple's Developer Tools again."
         }
     }
 }
 
-# use the 10.6 SDK for 10.6
-# but only if not (doing universal and the universal sysroot is set)
 platform darwin 10 {
+    # disable optimizing qmake, since the resulting executable doesn't
+    # seem to function correctly on 10.6 only (both i386 and x86_64).
+    configure.args-delete -optimized-qmake
+
+    # use the 10.6 SDK for 10.6, but only if not (doing universal and
+    # the universal sysroot is set)
     if {![variant_isset universal] || ![info exists universal_sysroot]} {
         if {[file exists /Developer/SDKs/MacOSX10.6.sdk]} {
             configure.args-append -sdk /Developer/SDKs/MacOSX10.6.sdk
         } else {
-            ui_msg "No SDK found in /Developer/SDKs ; \
+            ui_msg "No SDK found in /Developer/SDKs for 10.6 ; \
 configure will probably fail. \n \
 Please install Apple's Developer Tools again."
         }
@@ -347,18 +351,12 @@ please run:\n \
 pre-deactivate {
     # If this is qt4-* is selected, select 'none' & tell the user
     set current_select [exec ${prefix}/bin/${select_port} -s]
-    if { [exec ${prefix}/bin/${select_port} -s] == ${select_name} } {
+    if {${current_select} == ${select_name} } {
         system "${prefix}/bin/${select_port} none"
         ui_msg "\
-Port '${current_select}' was selected; none is now selected.\n \
+Port '${current_select}' was selected; 'none' is now selected.\n \
 To select another port for group '${select_group}', \
 please run '${select_port}'."
-    }
-
-    # remove case-sensitive ${prefix}/${qt_dir}/include/phonon/[Pp]honon
-    foreach tf [glob -directory ${prefix}/${qt_dir}/include/phonon \
-                     ?honon] {
-        delete ${tf}
     }
 }
 
