--- a/dports/aqua/qt4-mac-devel/Portfile
+++ b/dports/aqua/qt4-mac-devel/Portfile
@@ -235,9 +235,13 @@ Please install Apple's Developer Tools again."
     }
 }
 
-# use the 10.6 SDK for 10.6
-# but only if not (doing universal and the universal sysroot is set)
 platform darwin 10 {
+    # disable optimizing qmake, since the resulting executable doesn't
+    # seem to function correctly on 10.6 only (both i386 and x86_64).
+    configure.args-delete -optimized-qmake
+
+    # use the 10.6 SDK for 10.6, but only if not (doing universal and
+    # the universal sysroot is set)
     if {![variant_isset universal] || ![info exists universal_sysroot]} {
         if {[file exists /Developer/SDKs/MacOSX10.6.sdk]} {
             configure.args-append -sdk /Developer/SDKs/MacOSX10.6.sdk
@@ -349,18 +353,12 @@ please run:\n \
 pre-deactivate {
     # If this is qt4-* is selected, select 'none' & tell the user
     set current_select [exec ${prefix}/bin/${select_port} -s]
-    if { [exec ${prefix}/bin/${select_port} -s] == ${select_name} } {
+    if {${current_select} == ${select_name} } {
         system "${prefix}/bin/${select_port} none"
         ui_msg "\
-Port '${current_select}' was selected; none is now selected.\n \
+Port '${current_select}' was selected; 'none' is now selected.\n \
 To select another port for group '${select_group}', \
 please run '${select_port}'."
-    }
-
-    # remove case-sensitive ${prefix}/${qt_dir}/include/phonon/[Pp]honon
-    foreach tf [glob -directory ${prefix}/${qt_dir}/include/phonon \
-                     ?honon] {
-        delete ${tf}
     }
 }
 
