Moved from hard-coded "/Developer" to ${developer_dir}.  Removed unknown SQL driver "sqlite_symbian" (even though it is referenced in Qt's 'configure').
git-svn-id: https://svn.macports.org/repository/macports/trunk@69883 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac-devel/Portfile
+++ b/dports/aqua/qt4-mac-devel/Portfile
@@ -225,8 +225,8 @@ platform darwin 8 {
 # but only if not (doing universal and the universal sysroot is set)
 platform darwin 9 {
     if {![variant_isset universal] || ![info exists universal_sysroot]} {
-        if {[file exists /Developer/SDKs/MacOSX10.5.sdk]} {
-            configure.args-append -sdk /Developer/SDKs/MacOSX10.5.sdk
+        if {[file exists ${developer_dir}/SDKs/MacOSX10.5.sdk]} {
+            configure.args-append -sdk ${developer_dir}/SDKs/MacOSX10.5.sdk
         } else {
             ui_msg "No SDK found in Developer/SDKs for 10.5 ; \
 configure will probably fail. \n \
@@ -243,10 +243,10 @@ platform darwin 10 {
     # use the 10.6 SDK for 10.6, but only if not (doing universal and
     # the universal sysroot is set)
     if {![variant_isset universal] || ![info exists universal_sysroot]} {
-        if {[file exists /Developer/SDKs/MacOSX10.6.sdk]} {
-            configure.args-append -sdk /Developer/SDKs/MacOSX10.6.sdk
+        if {[file exists ${developer_dir}/SDKs/MacOSX10.6.sdk]} {
+            configure.args-append -sdk ${developer_dir}/SDKs/MacOSX10.6.sdk
         } else {
-            ui_msg "No SDK found in /Developer/SDKs for 10.6 ; \
+            ui_msg "No SDK found in ${developer_dir}/SDKs for 10.6 ; \
 configure will probably fail. \n \
 Please install Apple's Developer Tools again."
         }
