qt4-mac, qt4-mac-devel: clarify in missing-SDK error message where the missing SDK was expected to have been located
git-svn-id: https://svn.macports.org/repository/macports/trunk@69885 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac-devel/Portfile
+++ b/dports/aqua/qt4-mac-devel/Portfile
@@ -228,7 +228,7 @@ platform darwin 9 {
         if {[file exists ${developer_dir}/SDKs/MacOSX10.5.sdk]} {
             configure.args-append -sdk ${developer_dir}/SDKs/MacOSX10.5.sdk
         } else {
-            ui_msg "No SDK found in Developer/SDKs for 10.5 ; \
+            ui_msg "No SDK found in ${developer_dir}/SDKs for 10.5 ; \
 configure will probably fail. \n \
 Please install Apple's Developer Tools again."
         }
