- update gtk-osx-application to 0.9.4 - install library and headers in prefix instead of python2.6 subtree
git-svn-id: https://svn.macports.org/repository/macports/trunk@69886 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gtk-osx-application/Portfile
+++ b/dports/devel/gtk-osx-application/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            gtk-osx-application
-version         0.9.2
+version         0.9.4
 categories      devel
 maintainers     elelay openmaintainer
 
@@ -22,9 +22,9 @@ platforms       darwin
 master_sites	http://sourceforge.net/projects/gtk-osx/files/GTK-OSX Build/
 distname	    ige-mac-integration-${version}
 
-checksums       md5     82107195a7dc064e028b75f053ba29b7 \
-		        sha1    64b238099570c968b51c2d98ab06bf3cf11411dd \
-		        rmd160  3c1f187620bd0b54f39a15038210eef23ddbb068
+checksums           md5     f224cb52ed82b56dcad3ea9e26cb8ec0 \
+                    sha1    a69ceb11179c17045027ac6761f033f042dab006 \
+                    rmd160  16b97c8e819628fdc0aabb94f9bbc8d9e4fe6220
 
 depends_build   port:pkgconfig
 
@@ -71,3 +71,7 @@ if {![variant_isset python25]} {
 
 
 configure.ccache	no
+configure.cmd-append    --libdir=${prefix}/lib --includedir=${prefix}/include
+
+patchfiles-append       patch-bindings-python-gtk_osxapplication-Makefile-in.diff\
+                        patch-bindings-python-igemacintegration-Makefile-in.diff
