Convert ui_msg to notes and update homepage.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69888 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/nrg/Portfile
+++ b/dports/net/nrg/Portfile
@@ -15,7 +15,7 @@ long_description	        NRG is an RRDtool front-end tool to monitor traffic and
 				automatically creates and maintains web pages and RRDtool databases, \
 				while providing short and long-term graph web pages just like MRTG.
 
-homepage			http://nrg.hep.wisc.edu/
+homepage			http://ginseng.hep.wisc.edu/NRG/
 master_sites		        ftp://noc.hep.wisc.edu/src/nrg/ \
 				ftp://noc.hep.wisc.edu/pub/src/nrg/
 checksums			md5 c38e6b27bc99f8f7fd825bc6e1a44f68
@@ -93,9 +93,9 @@ post-destroot {
 		${destroot}${prefix}/var/${name}/Site.mconf.sample
 }
 
-post-activate {
+notes \
 
-ui_msg "\n#### To complete the NRG installation ####
+"#### To complete the NRG installation ####
 
 1) Make an /nrg symlink in your Apache document root pointing to the ../nrg/web NRG data directory:
 
@@ -148,7 +148,4 @@ have permissions to create graphs when you click an RRD file link.
    minutes to poll your data sources and update the rrd files.
 
 Be sure to read the documentation in ${prefix}/share/doc/${name}/html for
-creating custom graphs or for more information.\n"
-
-}
-
+creating custom graphs or for more information."
