science/lal: update to 6.4.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@69889 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/lal/Portfile
+++ b/dports/science/lal/Portfile
@@ -3,7 +3,7 @@
 PortSystem    1.0
 
 name          lal
-version       6.3.2
+version       6.4.1
 categories    science
 platforms     darwin
 maintainers   ram
@@ -14,12 +14,12 @@ long_description \
   LIGO Scientific Collaboration Algorithm Library containing core \
   routines for gravitational wave data analysis.
 
-homepage      https://www.lsc-group.phys.uwm.edu/daswg/projects/lal.html
-master_sites  http://www.lsc-group.phys.uwm.edu/daswg/download/software/source/
+homepage      https://www.lsc-group.phys.uwm.edu/daswg/projects/lalsuite.html
+master_sites  http://www.lsc-group.phys.uwm.edu/daswg/download/software/source/lalsuite
 
-checksums     md5 b5dbd2caa20bb1e76ccee165698f0ea0 \
-              sha1 15fc74d23cb134296176c7a1af5da77d6f8f2de0 \
-              rmd160 424c98993cdecda4ae74589ff8fa256bd4161ce1
+checksums     md5 254f2e33bee014fc4916769ad5a8dc81 \
+              sha1 191d7a9f3cb12c48a43af410436266fcdbfe5db1 \
+              rmd160 b87d7cca842e291e835ad74e734da3cf7d2ef53b
 
 depends_build bin:pkg-config:pkgconfig \
               port:python26
@@ -27,15 +27,12 @@ depends_build bin:pkg-config:pkgconfig \
 depends_lib   port:gsl \
               port:fftw-3 \
               port:fftw-3-single \
-              port:libframe \
-              port:metaio \
-              port:libxml2
 
 configure.python ${prefix}/bin/python2.6
 configure.args --mandir=${prefix}/share/man \
-               --enable-xml \
-               --disable-gcc-flags \
-               --disable-debug
+               --disable-gcc-flags
+
+build.args    V=1
 
 use_parallel_build yes
 
