science/lalstochastic: update to 1.1.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@69894 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/lalstochastic/Portfile
+++ b/dports/science/lalstochastic/Portfile
@@ -3,7 +3,7 @@
 PortSystem    1.0
 
 name          lalstochastic
-version       1.0
+version       1.1.0
 categories    science
 platforms     darwin
 maintainers   ram
@@ -11,21 +11,29 @@ license       GPL
 
 description   LSC Algorithm Library - Stochastic
 long_description \
-  LIGO Scientific Collaboration Algorithm Library - Stochastic, containing \
-  routines for stochastic gravitational wave background data analysis.
+  LIGO Scientific Collaboration Algorithm Library  - Stochastic, \
+  containing routines for stochastic gravitational wave background \
+  data analysis.
 
-homepage      https://www.lsc-group.phys.uwm.edu/daswg/projects/lal.html
-master_sites  http://www.lsc-group.phys.uwm.edu/daswg/download/software/source/
+homepage      https://www.lsc-group.phys.uwm.edu/daswg/projects/lalsuite.html
+master_sites  http://www.lsc-group.phys.uwm.edu/daswg/download/software/source/lalsuite
 
-checksums     md5 314e0700c1975bc237732f6c4135ed49 \
-              sha1 3b8de83581e81df75def4e193148cbb089fbd48c \
-              rmd160 0a99e706ce86a1e1d73345c90b7159f00dc6e6bc
+checksums     md5 6e949bca1210b71448e0d7108d900f19 \
+              sha1 ba09628fc54160c37a6cc0f0773766049d88cfc2 \
+              rmd160 7ee1da7ca605ab7a5df6f16e7a9fe4df85afd302
 
-depends_build bin:pkg-config:pkgconfig
+depends_build bin:pkg-config:pkgconfig \
+              port:python26
 
-depends_lib   port:lal
+depends_lib   port:lal \
+              port:lalmetaio \
+              port:metaio
 
-configure.args --disable-gcc-flags
+configure.python ${prefix}/bin/python2.6
+configure.args --mandir=${prefix}/share/man \
+               --disable-gcc-flags
+
+build.args    V=1
 
 use_parallel_build yes
 
