science/lalapps: update to 6.4.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@69897 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/lalapps/Portfile
+++ b/dports/science/lalapps/Portfile
@@ -3,7 +3,7 @@
 PortSystem    1.0
 
 name          lalapps
-version       6.3.2
+version       6.4.0
 categories    science
 platforms     darwin
 maintainers   ram
@@ -14,12 +14,12 @@ long_description \
   LALApps is a set of codes for gravitational wave data analysis, \
   against the LSC Algorithm Library.
 
-homepage      https://www.lsc-group.phys.uwm.edu/daswg/projects/lalapps.html
-master_sites  http://www.lsc-group.phys.uwm.edu/daswg/download/software/source/
+homepage      https://www.lsc-group.phys.uwm.edu/daswg/projects/lalsuite.html
+master_sites  http://www.lsc-group.phys.uwm.edu/daswg/download/software/source/lalsuite/
 
-checksums     md5 54235b5db97cb00b93f43bb04a324f05 \
-              sha1 6224d853c5ab02dfa3b05bf0c9ec3b22049e3c77 \
-              rmd160 fa2505c8acc8df5c34d84053094a03c228845900
+checksums     md5 0c82a2fe9f50e73010915d656c713571 \
+              sha1 fb9b8fd8cd0532cb8a9335dbe6c0f00d6f99478f \
+              rmd160 f522ccdbe862ba5ba2f63374a9132612c00bccd0
 
 depends_build bin:pkg-config:pkgconfig
 
@@ -30,16 +30,21 @@ depends_lib   port:python26 \
               port:libframe \
               port:metaio \
               port:lal \
+              port:lalframe \
+              port:lalmetaio \
+              port:lalburst \
+              port:lalinspiral \
+              port:lalpulsar \
               port:lalstochastic \
-              port:glue \
-              port:libxml2 \
-              port:cfitsio
+              port:lalxml \
+              port:glue
 
 configure.python ${prefix}/bin/python2.6
 configure.args   --mandir=${prefix}/share/man \
-                 --enable-xml \
-                 --disable-gcc-flags \
-                 --disable-debug
+                 --enable-lalxml \
+                 --disable-gcc-flags
+
+build.args    V=1
 
 use_parallel_build yes
 
