--- a/dports/textproc/liblrdf/Portfile
+++ b/dports/textproc/liblrdf/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            liblrdf
 version         0.4.0
+revision        1
 categories      textproc
 platforms       darwin
 maintainers     nomaintainer
