--- a/dports/python/py26-py2app-devel/Portfile
+++ b/dports/python/py26-py2app-devel/Portfile
@@ -8,7 +8,7 @@ name                py26-py2app-devel
 version             0.4.4
 categories-append   devel
 license             MIT/PSF
-maintainers         jmr openmaintainer
+maintainers         nomaintainer
 description         converts python scripts into executable Mac OS X apps
 long_description \
     A distutils extension which converts python scripts into executable \
