libmikmod: remove obsolete -no-cpp-precomp
git-svn-id: https://svn.macports.org/repository/macports/trunk@69903 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/libmikmod/Portfile
+++ b/dports/audio/libmikmod/Portfile
@@ -25,7 +25,7 @@ checksums           md5 5b05f3b1167eba7855b8e38bde2b8070 \
 
 patchfiles          patch-libmikmod.m4
 
-configure.cflags    "-no-cpp-precomp -Os"
+configure.optflags  -Os
 configure.args      --mandir=${prefix}/share/man --infodir=${prefix}/share/info
 
 variant esound {
@@ -34,4 +34,3 @@ variant esound {
 
 livecheck.type      regex
 livecheck.regex     libmikmod-(\\d+(?:\\.\\d+)*(?:-(?:alpha|beta)\\d)?)\\.tar\\.gz
-
