multiple ports: remove adding of -no-cpp-precomp, which has done nothing since gcc 3.3
git-svn-id: https://svn.macports.org/repository/macports/trunk@69904 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/cross/arm-elf-gcc/Portfile
+++ b/dports/cross/arm-elf-gcc/Portfile
@@ -147,7 +147,7 @@ pre-configure   {
 }
 configure.dir   ${workpath}/build
 configure.cmd   ${workpath}/gcc-${version}/configure
-configure.cc    "cc -no-cpp-precomp -I${prefix}/include"
+configure.cc-append    -I${prefix}/include
 configure.env	${environment}
 configure.args  --infodir='${prefix}/share/info' \
 				--mandir='${prefix}/share/man' \
