--- a/dports/devel/libgphoto2/Portfile
+++ b/dports/devel/libgphoto2/Portfile
@@ -32,7 +32,7 @@ depends_lib         port:dbus \
 patchfiles          patch-configure.diff patch-configure-nodoxygen.diff \
                     patch-camlibs_Makefile.in.diff
 
-configure.cflags-append   -I${prefix}/include -no-cpp-precomp
+configure.cflags-append   -I${prefix}/include
 configure.args      --mandir=${prefix}/share/man \
                     --with-drivers=all --with-libexif=auto
 
