--- a/dports/gnome/gnome-photo-print/Portfile
+++ b/dports/gnome/gnome-photo-print/Portfile
@@ -22,7 +22,7 @@ depends_lib	port:libgnomeprintui
 
 configure.args	--mandir=${prefix}/share/man
 configure.cppflags-append "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cflags-append -flat_namespace -undefined suppress
 
 livecheck.type  regex
 livecheck.regex "${gname}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
