--- a/dports/gnome/gnome-vfsmm/Portfile
+++ b/dports/gnome/gnome-vfsmm/Portfile
@@ -25,9 +25,8 @@ depends_build    port:doxygen
 depends_lib      port:glibmm \
                  port:gnome-vfs
 
-configure.cflags-append -no-cpp-precomp
-configure.cflags-append -flat_namespace
-configure.cflags-append "-undefined suppress"
+configure.cflags-append -flat_namespace \
+                        -undefined suppress
 
 livecheck.type   regex
 livecheck.url    http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
