--- a/dports/gnome/gnomeicu/Portfile
+++ b/dports/gnome/gnomeicu/Portfile
@@ -20,5 +20,5 @@ use_bzip2	yes
 patchfiles	patch_userserver.c patch_icu_db.c
 depends_lib     lib:libgnet:gnet lib:libgdbm:gdbm bin:gnome-session:gnome-session
 configure.cppflags-append "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress -DHAVE_NDBM=0"
+configure.cflags-append -flat_namespace -undefined suppress -DHAVE_NDBM=0
 configure.args	 --with-ndbm=no --with-gdbm=yes
