--- a/dports/gnome/gnonlin/Portfile
+++ b/dports/gnome/gnonlin/Portfile
@@ -26,7 +26,7 @@ depends_lib \
     port:gst-plugins-base
 
 configure.compiler	gcc-4.0
-configure.cflags-append "-no-cpp-precomp -funroll-loops -fstrict-aliasing"
+configure.cflags-append -funroll-loops -fstrict-aliasing
 configure.args-append	--enable-gtk-doc
 
 post-patch {
