--- a/dports/gnome/gnotime/Portfile
+++ b/dports/gnome/gnotime/Portfile
@@ -19,6 +19,6 @@ master_sites    sourceforge:gttr
 checksums	md5 f5543b00fb2646e7d2d1619a2aeed31d
 depends_lib	bin:guile:guile lib:libgtkhtml-2:libgtkhtml
 configure.cppflags-append "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cflags-append -flat_namespace -undefined suppress
 
 livecheck.regex "<title>${name} ${name}-(\\d+(?:\\.\\d+)*) released.*</title>"
