--- a/dports/gnome/gpdf/Portfile
+++ b/dports/gnome/gpdf/Portfile
@@ -17,8 +17,8 @@ checksums	md5 9278cd3b9d06e3b1d364452f0e512fa9
 depends_lib	bin:gs:ghostscript lib:libgail-gnome:libgail-gnome \
 		lib:libgnomeprintui-2:libgnomeprintui
 patchfiles	patch-gpdf-thumbnails-view.cc
-configure.cppflags-append "-no-cpp-precomp -L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cppflags-append -L${prefix}/lib
+configure.cflags-append -flat_namespace -undefined suppress
 configure.ldflags-append "-lexpat -lfontconfig -lXft -lXrender -lfreetype -L/usr/X11R6/lib -lX11 -lXinerama -lXext -lXrandr"
 
 livecheck.type  regex
