--- a/dports/gnome/gst-plugins-bad/Portfile
+++ b/dports/gnome/gst-plugins-bad/Portfile
@@ -65,7 +65,7 @@ configure.args              --disable-dc1394 \
                             --enable-experimental \
                             --enable-static
 configure.cppflags-append   "-L${prefix}/lib"
-configure.cflags-append     "-no-cpp-precomp -funroll-loops -fstrict-aliasing"
+configure.cflags-append     -funroll-loops -fstrict-aliasing
 configure.env-append        "HAVE_CXX=yes"
 
 patchfiles  modplug.patch
