--- a/dports/gnome/gst-plugins-ugly/Portfile
+++ b/dports/gnome/gst-plugins-ugly/Portfile
@@ -41,7 +41,7 @@ universal_variant   no
 
 configure.args              mandir=${prefix}/share/man --enable-static
 configure.cppflags-append   "-L${prefix}/lib"
-configure.cflags-append     "-no-cpp-precomp -funroll-loops -fstrict-aliasing"
+configure.cflags-append     -funroll-loops -fstrict-aliasing
 
 post-extract {
     reinplace "s|-flat_namespace -undefined suppress|-undefined define_a_way|g" \
