--- a/dports/gnome/gthumb/Portfile
+++ b/dports/gnome/gthumb/Portfile
@@ -37,9 +37,8 @@ depends_lib \
     port:popt
 
 configure.args          --disable-scrollkeeper
-configure.cflags-append -no-cpp-precomp
-configure.cflags-append -flat_namespace
-configure.cflags-append "-undefined suppress"
+configure.cflags-append -flat_namespace \
+                        -undefined suppress
 
 post-activate {
     system "scrollkeeper-update"
