--- a/dports/gnome/libglademm/Portfile
+++ b/dports/gnome/libglademm/Portfile
@@ -23,7 +23,7 @@ checksums       md5     f9ca5b67f6c551ea98790ab5f21c19d0 \
 depends_lib	port:gtkmm \
                 port:libglade2
 
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cflags-append -flat_namespace -undefined suppress
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
