--- a/dports/gnome/libgnomemm/Portfile
+++ b/dports/gnome/libgnomemm/Portfile
@@ -23,9 +23,7 @@ checksums       md5     4801c2b60d73b08ea01fe79aafc678df \
 depends_lib	port:gtkmm  \
                 port:libgnome
 
-configure.cflags-append -no-cpp-precomp
-configure.cflags-append -flat_namespace
-configure.cflags-append "-undefined suppress"
+configure.cflags-append -flat_namespace -undefined suppress
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
