--- a/dports/gnome/linsmith/Portfile
+++ b/dports/gnome/linsmith/Portfile
@@ -13,4 +13,4 @@ checksums	md5 6e8659fcd0f1dbc7e805aa0f59d01b28
 depends_lib	bin:gnome-session:gnome-session port:libgnomeprintui
 configure.args	--mandir=${prefix}/share/man
 configure.cppflags-append "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -I${prefix}/include -lmx"
+configure.cflags-append -I${prefix}/include -lmx
