--- a/dports/graphics/epeg/Portfile
+++ b/dports/graphics/epeg/Portfile
@@ -19,4 +19,4 @@ checksums	md5 9b68516f27e8c0386d03168444a4f5de
 depends_lib     lib:libjpeg:jpeg 
 configure.args	--mandir=${prefix}/share/man 
 configure.cppflags-append  "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -L${prefix}/lib"
+configure.cflags-append -L${prefix}/lib
