--- a/dports/lang/guile16/Portfile
+++ b/dports/lang/guile16/Portfile
@@ -56,7 +56,7 @@ configure.args  CPPFLAGS="-I${prefix}/include"    \
                 --mandir=${prefix}/share/man
 
 platform darwin {
-    configure.args-append    CFLAGS="-no-cpp-precomp -Dmacosx"
+    configure.args-append    CFLAGS="-Dmacosx"
 }
 
 post-destroot {
