--- a/dports/lang/kaffe/Portfile
+++ b/dports/lang/kaffe/Portfile
@@ -21,8 +21,7 @@ checksums           md5 375c3dc44656f3f253455ea219f768b1
 configure.cflags-append     -fstrict-aliasing \
                             -funroll-loops \
                             -L${prefix}/lib
-configure.cppflags-append   -no-cpp-precomp \
-                            -L${prefix}/lib \
+configure.cppflags-append   -L${prefix}/lib \
                             -I${prefix}/include/freetype2
 configure.args      --disable-nls \
                     --disable-rpath \
