--- a/dports/net/driftnet/Portfile
+++ b/dports/net/driftnet/Portfile
@@ -40,8 +40,7 @@ use_configure	no
 
 build.target	{ }
 
-build.args	CFLAGS="-no-cpp-precomp			\
-			-I${prefix}/include		\
+build.args	CFLAGS="-I${prefix}/include		\
 			-I${prefix}/lib/glib/include	\
 			-I${prefix}/include/glib-1.2	\
 			-I${prefix}/include/gtk-1.2	\
@@ -52,4 +51,3 @@ destroot	{ file copy ${workpath}/${worksrcdir}/${name} \
 		  file copy ${workpath}/${worksrcdir}/${name}.1 \
 			    ${destroot}${prefix}/share/man/man1
 		}
-
