--- a/dports/x11/dlume/Portfile
+++ b/dports/x11/dlume/Portfile
@@ -23,7 +23,7 @@ depends_lib \
 
 configure.args	--mandir=${prefix}/share/man 
 configure.cppflags-append	"-L${prefix}/lib"
-configure.cflags	"-no-cpp-precomp -flat_namespace -undefined suppress" 
+configure.cflags	-flat_namespace -undefined suppress
 
 post-configure {
 		reinplace "s|-export-dynamic||g" ${worksrcpath}/Makefile
