--- a/dports/x11/gtk2-clearlooks/Portfile
+++ b/dports/x11/gtk2-clearlooks/Portfile
@@ -26,7 +26,7 @@ depends_lib     port:gtk2
 
 configure.args              --mandir=${prefix}/share/man
 configure.cppflags-append   -L${prefix}/lib
-configure.cflags            -no-cpp-precomp -flat_namespace -undefined suppress
+configure.cflags            -flat_namespace -undefined suppress
 
 livecheck.regex "<title>${my_name} ${my_name} (\\d+(?:\\.\\d+)*) released .*</title>"
 
