--- a/dports/x11/slicker/Portfile
+++ b/dports/x11/slicker/Portfile
@@ -30,7 +30,7 @@ post-patch      {
 		system "cp '${portpath}/${filesdir}/detect-autoconf.sh' '${worksrcpath}/admin/'"
 		system "cd '${worksrcpath}' && make -f Makefile.cvs"
 }
-configure.cppflags-append	"-I${prefix}/include/qt3 -no-cpp-precomp -fno-common"
+configure.cppflags-append	-I${prefix}/include/qt3 -fno-common
 configure.env	LIBS='-L${prefix}/lib' DYLD_LIBRARY_PATH='${prefix}/lib'
 configure.args  --prefix='${prefix}' --includedir='${prefix}/include' --libdir='${prefix}/lib' \
 		--with-extra-includes='${prefix}/include' --with-extra-libs='${prefix}/lib' \
