--- a/dports/cross/arm-elf-binutils/Portfile
+++ b/dports/cross/arm-elf-binutils/Portfile
@@ -35,7 +35,7 @@ dist_subdir			binutils
 pre-configure   	{ system "cd ${workpath} && mkdir -p build"}
 configure.dir   	${workpath}/build
 configure.cmd   	${worksrcpath}/configure
-configure.cc	   	"cc -no-cpp-precomp -I${prefix}/include"
+configure.cc-append	   	-I${prefix}/include
 configure.args  	--infodir='${prefix}/share/info' --target=${crossgcc-target} \
 					--program-prefix=${crossgcc-target}- --mandir='${prefix}/share/man' \
 					--disable-werror
