--- a/dports/devel/orbit/Portfile
+++ b/dports/devel/orbit/Portfile
@@ -25,7 +25,7 @@ depends_lib 	port:glib1 port:gettext
 patchfiles	patch-configure patch-m4-underquoted
 configure.args	\
     	LDFLAGS="-L${prefix}/lib" \
-	CPPFLAGS="-I${prefix}/include -no-cpp-precomp -DHAVE_LIMITED_WRITEV \
+	CPPFLAGS="-I${prefix}/include -DHAVE_LIMITED_WRITEV \
 	    	-DMAX_LIMITED_IOVECS=1024" \
 	CFLAGS="-O3 -fstrict-aliasing -funroll-loops" \
 	--infodir=${prefix}/share/info
