--- a/dports/gnome/balsa/Portfile
+++ b/dports/gnome/balsa/Portfile
@@ -27,7 +27,7 @@ configure.args	--without-esmtp --mandir=${prefix}/share/man \
 		--with-iconv=${prefix}
 
 configure.cppflags-append "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cflags-append -flat_namespace -undefined suppress
 
 livecheck.type  regex
 livecheck.url   ${homepage}
