--- a/dports/gnome/gnomesu/Portfile
+++ b/dports/gnome/gnomesu/Portfile
@@ -20,6 +20,6 @@ depends_lib	\
 	port:libglade2
 configure.args	--mandir=${prefix}/share/man
 configure.cppflags-append "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cflags-append -flat_namespace -undefined suppress
 
 livecheck.regex <title>${name} (.*) released.*</title>
