--- a/dports/gnome/gnopernicus/Portfile
+++ b/dports/gnome/gnopernicus/Portfile
@@ -29,7 +29,7 @@ depends_lib	port:gtk2 \
 		port:dbus \
 		port:dbus-glib
 configure.cppflags-append "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cflags-append -flat_namespace -undefined suppress
 configure.args	--disable-scrollkeeper
 
 post-destroot	{
