--- a/dports/gnome/gnotify/Portfile
+++ b/dports/gnome/gnotify/Portfile
@@ -17,7 +17,7 @@ master_sites    sourceforge
 checksums	md5 6e7a031a5b1e9b12ac04992ccbf71627
 patchfiles	patch_Makefile.in
 depends_lib	bin:gnome-session:gnome-session
-configure.cflags	-no-cpp-precomp -flat_namespace -undefined suppress
+configure.cflags	-flat_namespace -undefined suppress
 pre-configure	{
 		file copy -force ${filespath}/install-sh ${worksrcpath}
 		file copy -force ${filespath}/mkinstalldirs ${worksrcpath}
