--- a/dports/gnome/libgnomecanvasmm/Portfile
+++ b/dports/gnome/libgnomecanvasmm/Portfile
@@ -25,7 +25,7 @@ depends_build   port:pkgconfig
 depends_lib	port:gtkmm \
                 port:libgnomecanvas
 
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cflags-append -flat_namespace -undefined suppress
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
