--- a/dports/gnome/mlview/Portfile
+++ b/dports/gnome/mlview/Portfile
@@ -19,7 +19,7 @@ use_bzip2 	yes
 configure.args	--mandir=${prefix}/share/man \
 		--with-gconf-source="xml::${destroot}${prefix}/etc/gconf/gconf.xml.defaults"
 configure.cppflags-append "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cflags-append -flat_namespace -undefined suppress
 pre-destroot    { file mkdir -f ${destroot}${prefix}/etc/gconf/gconf.xml.defaults/ }
 post-destroot {
 	file delete ${destroot}${prefix}/etc/gconf/gconf.xml.defaults/schemas/apps/%gconf.xml
