--- a/dports/gnome/oaf/Portfile
+++ b/dports/gnome/oaf/Portfile
@@ -28,9 +28,8 @@ configure.args  --mandir=${prefix}/share/man \
                 ac_cv_path_ORBIT_IDL=${prefix}/bin/orbit-idl \
                 ac_cv_prog_XML_CONFIG=${prefix}/bin/xml-config
 configure.cppflags-append "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cflags-append -flat_namespace -undefined suppress
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
 livecheck.regex {LATEST-IS-(\d+(?:\.\d+)*)}
-
