--- a/dports/graphics/gtksee/Portfile
+++ b/dports/graphics/gtksee/Portfile
@@ -13,5 +13,5 @@ checksums	md5 faf4196ea38df0da93d9f403c03883a3
 depends_lib	lib:libgtk.1:gtk1
 configure.args	--mandir=${prefix}/share/man 
 configure.cppflags-append "-L${prefix}/lib"
-configure.cflags-append "-no-cpp-precomp -flat_namespace -undefined suppress" 
+configure.cflags-append -flat_namespace -undefined suppress
 destroot.destdir    prefix=${destroot}${prefix}
