--- a/dports/x11/gtk-thinice-engine/Portfile
+++ b/dports/x11/gtk-thinice-engine/Portfile
@@ -26,7 +26,7 @@ use_bzip2 	yes
 use_autoreconf yes
 autoreconf.args -fvi
 
-configure.cflags	"-no-cpp-precomp -flat_namespace -undefined suppress"
+configure.cflags	-flat_namespace -undefined suppress
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
