jabber: add missing homepage, update master_sites
git-svn-id: https://svn.macports.org/repository/macports/trunk@69906 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/jabber/Portfile
+++ b/dports/net/jabber/Portfile
@@ -6,10 +6,14 @@ version		1.4.2
 revision	5
 categories	net
 maintainers	nomaintainer
+homepage	http://jabberd.org/
 description	Online presence and instant messaging server
 long_description	The Jabber server (jabberd) is a daemon for Jabber clients to connect and communicate with.
 platforms	darwin
-master_sites	http://jabberd.jabberstudio.org/downloads/
+master_sites	http://download.jabberd.org/jabberd14/ \
+		http://download.jabberd.org/jabberd14/old/ \
+		http://download.jabberd.org/jabberd14/old/discontinued/ \
+		netbsd:packages/distfiles/
 checksums	md5 10780dbdb93926ea5bb360e1186b939c
 depends_lib	port:libiconv port:expat port:gettext lib:libpth.a:pth
 build.type  gnu
