gfontsampler: de-lint, add missing homepage, use freebsd mirror group
git-svn-id: https://svn.macports.org/repository/macports/trunk@69907 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/gfontsampler/Portfile
+++ b/dports/x11/gfontsampler/Portfile
@@ -1,16 +1,19 @@
 # $Id$
+
 PortSystem 1.0
+
 name		gfontsampler
 version		0.4
 description	Browse and compare all of your installed fonts.
 long_description	${description}
+homepage	http://web.archive.org/web/20061010193007/http://linuxadvocate.org/projects/gfontsampler/
 maintainers	nomaintainer
-categories	x11 
-platforms	darwin 
-master_sites	ftp://ftp.freebsd.org/pub/FreeBSD/ports/distfiles/
+categories	x11
+platforms	darwin
+master_sites	freebsd
 checksums	md5 db2dadf22192861475686030a17c300e
 depends_lib	lib:libgnomeui-2:libgnomeui
-configure.args	--mandir=${prefix}/share/man 
+configure.args	--mandir=${prefix}/share/man
 configure.cflags-append	\
 	-flat_namespace \
 	-undefined suppress
