Add variant description.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69908 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/nrg/Portfile
+++ b/dports/net/nrg/Portfile
@@ -35,7 +35,7 @@ platform i386 {
         configure.args-append   --build=i386-unknown-freebsd
 }
 
-variant pingd_server  {
+variant pingd_server description {pingd daemon to graph network latency with NRG} {
 	startupitem.create	yes
 	startupitem.name	pingd
 	startupitem.executable	"${prefix}/bin/pingd"
