--- a/dports/net/rabbitmq-server/Portfile
+++ b/dports/net/rabbitmq-server/Portfile
@@ -3,7 +3,7 @@
 
 PortSystem 1.0
 name		rabbitmq-server
-version		1.7.2
+version		1.8.1
 categories	net 
 maintainers	paperplanes.de:meyer rabbitmq.com:tonyg openmaintainer
 platforms	darwin
@@ -18,11 +18,12 @@ homepage        http://www.rabbitmq.com/
 master_sites    http://www.rabbitmq.com/releases/rabbitmq-server/v${version}/
 
 checksums \
-    md5 fb83be3b1577cdd54459012b85b7631d \
-    sha1 ecc35617cc14cca7752f67b845bcc97e421254b4 \
-    rmd160 ba2db97f88a3b51c6246307244e3f5b40112bb36
+    md5 2471bdf0ba77b73aed1cc8eddc10aa19 \
+    sha1 f8a803eb7a5fa78074d47196ed920bf1edcfb240 \
+    rmd160 433cd232c14c1e8dc66e2359da55dd665a9b1ea2
 
-depends_lib     port:erlang
+depends_lib	port:erlang
+depends_build	port:xmlto port:libxslt
 
 platform darwin 7 {
     depends_build-append port:py25-simplejson
@@ -96,6 +97,8 @@ post-destroot {
     xinstall -m 555 ${filespath}/rabbitmq-asroot-script-wrapper \
                 ${wrappersbin}/rabbitmq-activate-plugins
 
+    reinplace -E "s:MACPORTS_PREFIX/bin:${prefix}/bin:" \
+                ${wrappersbin}/rabbitmq-multi
     reinplace -E "s:/usr/lib/rabbitmq/bin/:${prefix}/lib/rabbitmq/bin/:" \
                 ${wrappersbin}/rabbitmq-multi
     reinplace -E "s:/var/lib/rabbitmq:${prefix}/var/lib/rabbitmq:" \
