rev bump to 0.96
git-svn-id: https://svn.macports.org/repository/macports/trunk@69913 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-file-libmagic/Portfile
+++ b/dports/perl/p5-file-libmagic/Portfile
@@ -4,14 +4,18 @@ PortSystem		1.0
 
 PortGroup		perl5 1.0
 
-perl5.setup		File-LibMagic 0.85
+version			0.96
+perl5.setup		File-LibMagic ${version}
 revision		0
-extract.suffix		.tgz
+extract.suffix	.tgz
 maintainers		ricci
 description		Perl wrapper for libmagic
 long_description	${description}
 
-checksums		md5 037150b3131a566b518a7042f9a8d527
+checksums           md5     945f063eb9cd2ce555f452792320f601 \
+                    sha1    1624150be5e0994948556f63481f2779b3ffa024
+
+
 platforms		darwin
 
 depends_lib		port:file
