--- a/dports/gis/cgal/Portfile
+++ b/dports/gis/cgal/Portfile
@@ -6,6 +6,7 @@ PortGroup               cmake 1.0
 
 name										cgal
 version									3.6.1
+revision                1
 license									LGPL - QPL
 categories							gis science
 maintainers							vince
@@ -37,8 +38,17 @@ depends_lib-append			port:boost \
                         port:gmp
 
 variant demos description {Create demos} {
-	depends_lib-append		port:qt4-mac
+	depends_lib-append		port:qt4-mac \
+                        port:libQGLViewer
 	
 	configure.args-append	-DWITH_examples=TRUE
 	configure.args-append	-DWITH_demos=TRUE
+
+  build.target-append   examples demos
+  use_parallel_build    no
+
+  post-destroot {       xinstall -d ${destroot}${prefix}/share/${name}
+                        copy ${worksrcpath}/demo ${destroot}${prefix}/share/${name}
+                        copy ${worksrcpath}/examples ${destroot}${prefix}/share/${name}
+  }
 }
