--- a/dports/audio/libmikmod/Portfile
+++ b/dports/audio/libmikmod/Portfile
@@ -1,6 +1,7 @@
 # $Id$
 
 PortSystem 1.0
+PortGroup  muniversal 1.0
 
 name                libmikmod
 version             3.2.0-beta2
@@ -9,7 +10,6 @@ categories          audio
 maintainers         nomaintainer
 description         portable sound library
 platforms           darwin
-universal_variant   no
 
 long_description    libmikmod is a portable sound library for Unix systems. \
                     It can play IT, XM, S3M, MTM, 669, STM, ULT, FAR, MED, \
@@ -22,6 +22,8 @@ use_bzip2           yes
 checksums           md5 5b05f3b1167eba7855b8e38bde2b8070 \
                     sha1 f16fc09ee643af295a8642f578bda97a81aaf744 \
                     rmd160 587d1c1ea24f3d52bf76407ee327b8fa8143b277
+
+merger_arch_compiler yes
 
 patchfiles          patch-libmikmod.m4
 
