libmikmod: Add variant description.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69916 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/libmikmod/Portfile
+++ b/dports/audio/libmikmod/Portfile
@@ -30,7 +30,7 @@ patchfiles          patch-libmikmod.m4
 configure.optflags  -Os
 configure.args      --mandir=${prefix}/share/man --infodir=${prefix}/share/info
 
-variant esound {
+variant esound description {Enable esound support} {
     depends_lib-append  port:esound
 }
 
