imake: Ensure correct compiler is used; Add openmaintainer.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69917 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/imake/Portfile
+++ b/dports/x11/imake/Portfile
@@ -7,7 +7,7 @@ name         imake
 version      1.0.3
 categories   x11 devel
 platforms    darwin
-maintainers  mcalhoun
+maintainers  mcalhoun openmaintainer
 
 description       Discontinued imake build system.
 long_description  ${description}
@@ -22,6 +22,13 @@ use_bzip2 yes
 checksums           md5     ff553c4646edcc9e76b7308991ad421a \
                     sha1    625a974dd0fe4c4e9d7ec036fc7b079ec05185f1 \
                     rmd160  5cbd5f23fc8360a10cb36c367405f5950443349d
+
+patchfiles-append patch-imakemdep.h.diff
+
+post-patch {
+    reinplace "s|__MACPORTS_CPP__|${configure.cpp}|g" ${worksrcpath}/imakemdep.h
+    reinplace "s|__MACPORTS_CC__|${configure.cc}|g"   ${worksrcpath}/imakemdep.h
+}
 
 depends_run    port:xorg-cf-files path:bin/perl:perl5
 depends_build  port:pkgconfig port:xorg-xproto
