--- a/dports/graphics/netpbm/Portfile
+++ b/dports/graphics/netpbm/Portfile
@@ -24,9 +24,6 @@ platforms       darwin freebsd linux
 # please make sure to test it on OS X 10.4 as well!  Thanks!
 use_parallel_build  no
 
-# See http://trac.macports.org/ticket/21240
-universal_variant no
-
 depends_build   path:bin/perl:perl5
 
 depends_lib     port:zlib port:jpeg port:tiff \
@@ -49,13 +46,13 @@ configure.optflags -O3
 configure {
     file copy ${worksrcpath}/Makefile.config.in ${worksrcpath}/Makefile.config
     reinplace "s|^CC =.*\$|CC = ${configure.cc}|" ${worksrcpath}/Makefile.config
-    #if {[variant_isset universal]} {
-    #    reinplace "s|^#CFLAGS =.*\$|CFLAGS = ${configure.cppflags} ${configure.cflags} ${configure.universal_cflags}|" ${worksrcpath}/Makefile.config
-    #    reinplace "s|^#LDFLAGS +=.*\$|LDFLAGS = ${configure.ldflags} ${configure.universal_ldflags}|g" ${worksrcpath}/Makefile.config
-    #} else {
+    if {[variant_isset universal]} {
+        reinplace "s|^#CFLAGS =.*\$|CFLAGS = ${configure.cppflags} ${configure.cflags} ${configure.universal_cflags}|" ${worksrcpath}/Makefile.config
+        reinplace "s|^#LDFLAGS +=.*\$|LDFLAGS = ${configure.ldflags} ${configure.universal_ldflags}|g" ${worksrcpath}/Makefile.config
+    } else {
         reinplace "s|^#CFLAGS =.*\$|CFLAGS = ${configure.cppflags} ${configure.cflags} ${configure.cc_archflags}|" ${worksrcpath}/Makefile.config
         reinplace "s|^#LDFLAGS +=.*\$|LDFLAGS = ${configure.ldflags} ${configure.cc_archflags}|g" ${worksrcpath}/Makefile.config
-    #}
+    }
     reinplace "s|^CFLAGS_SHLIB =.*\$|CFLAGS_SHLIB = -fno-common|" ${worksrcpath}/Makefile.config
     reinplace "s|^TIFFLIB =.*\$|TIFFLIB = -ltiff|" ${worksrcpath}/Makefile.config
     reinplace "s|^JPEGLIB =.*\$|JPEGLIB = -ljpeg|" ${worksrcpath}/Makefile.config
@@ -67,6 +64,9 @@ configure {
 platform darwin {
     post-configure {
         set ldshlib "${configure.ldflags} -dynamiclib -install_name ${prefix}/lib/libnetpbm.\$(MAJ).dylib -compatibility_version \$(MAJ) -current_version ${version}"
+        if {[variant_isset universal]} {
+            set ldshlib "${ldshlib} ${configure.universal_ldflags}"
+        }
         reinplace "s|^NETPBMLIBTYPE =.*\$|NETPBMLIBTYPE = dylib|" ${worksrcpath}/Makefile.config
         reinplace "s|^NETPBMLIBSUFFIX =.*\$|NETPBMLIBSUFFIX = dylib|" ${worksrcpath}/Makefile.config
         reinplace "s|^LDSHLIB =.*\$|LDSHLIB = ${ldshlib}|" ${worksrcpath}/Makefile.config
